Get more tests in order