@@ -21,7 +21,11 @@ package org.apache.druid.testing.embedded.indexer;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import org.apache.druid.data.input.avro.AvroExtensionsModule;
+import org.apache.druid.data.input.orc.OrcExtensionsModule;
+import org.apache.druid.data.input.parquet.ParquetExtensionsModule;
 import org.apache.druid.java.util.common.Pair;
+import org.apache.druid.testing.embedded.EmbeddedDruidCluster;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
@@ -32,6 +36,16 @@ public class ITLocalInputSourceAllFormatSchemalessTest extends AbstractLocalInpu
 {
   private static final String INDEX_TASK = "/indexer/wikipedia_local_input_source_index_task_schemaless.json";
   private static final String INDEX_QUERIES_RESOURCE = "/indexer/wikipedia_index_schemaless_queries.json";
+
+  @Override
+  protected void addResources(EmbeddedDruidCluster cluster)
+  {
+    cluster.addExtensions(
+        AvroExtensionsModule.class,
+        ParquetExtensionsModule.class,
+        OrcExtensionsModule.class
+    );
+  }
 
   @Test
   public void testAvroInputFormatIndexDataIngestionSpecWithFileSchemaSchemaless() throws Exception
@@ -92,7 +106,10 @@ public class ITLocalInputSourceAllFormatSchemalessTest extends AbstractLocalInpu
         INDEX_TASK,
         INDEX_QUERIES_RESOURCE,
         true,
-        ImmutableMap.of("USE_NESTED_COLUMN_INDEXER", true),
+        Map.of(
+            "USE_NESTED_COLUMN_INDEXER", true,
+            "INPUT_SOURCE_FILTER", "tiny_wiki*"
+        ),
         Collections.emptyMap(),
         new Pair<>(false, false)
     );
